modules/ec2-proxy/main.tf
data "aws_ami" "amazon_linux_ami" {
  most_recent = true

  filter {
    name   = "owner-alias"
    values = ["amazon"]
  }

  filter {
    name   = "name"
    values = ["amzn2-ami-hvm*"]
  }
}


resource "aws_instance" "ec2_instance" {
  ami                         = data.aws_ami.amazon_linux_ami.id
  instance_type               = var.instance_type
  subnet_id                   = var.subnet_id
  associate_public_ip_address = true
  vpc_security_group_ids      = [aws_security_group.security_group.id]
  user_data                   = templatefile("${path.module}/userdata.tftpl", { proxy_to_ip = var.proxy_to_ip, proxy_to_port = var.proxy_to_port })
  user_data_replace_on_change = true

  key_name = "pete-jun23"

  tags = {
    Name = "Proxy"
  }
}

resource "aws_security_group" "security_group" {
  name   = "proxy-sg"
  vpc_id = var.vpc_id

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["86.134.162.101/32"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]

  }

  tags = {
    Name = "Proxy Security Group"
  }
}
